@@ -19,6 +19,7 @@
 #' @param mfrow numeric 2-vector, used if \code{multi=FALSE}.  If not specified, default plot matrix layout will be figured.
 #' @param y.n.risk used if \code{what="1-S"}, to specify \code{y} coordinate for putting numbers at risk, typically below the \code{x}-axis label
 #' @param bot number of spaces to reserve at bottom of plot for numbers at risk, if \code{what="1-S"}
+#' @aehaz logical.  Set to \code{FALSE} to not print number of events and hazard rate on plots.
 #' @param append logical. If \code{TRUE} output will be appended instead of overwritten.
 #' @param \dots ignored
 #' @export
@@ -44,7 +45,7 @@ survReport <- function(formula, data=NULL, subset=NULL, na.action=na.retain,
                        conf=c('diffbands', 'bands', 'bars', 'none'),
                        panel='surv', subpanel=NULL, head=NULL, tail=NULL,
                        h=3, w=4.5, multi=FALSE, mfrow=NULL, y.n.risk=-.5,
-                       bot=2, append=FALSE, ...)
+                       bot=2, aehaz=TRUE, append=FALSE, ...)
 {
   if(grepl('[^a-zA-Z-]', panel))
     stop('panel must contain only A-Z a-z -')
@@ -136,13 +137,13 @@ survReport <- function(formula, data=NULL, subset=NULL, na.action=na.retain,
                n.risk=TRUE, conf=conf, lwd=lwd,
                lty=1, col=col, ylab=yl,
                label.curves=list(keys='lines', key.opts=list(bty='n')),
-               levels.only=TRUE, ...)
+               levels.only=TRUE, aehaz=aehaz, ...)
     else
       survplot(s, fun=function(y) 1 - y,
                n.risk=TRUE, y.n.risk=y.n.risk, conf=conf, lwd=lwd,
                lty=1, col=col, ylab=yl,
                label.curves=list(keys='lines', key.opts=list(bty='n')),
-               levels.only=TRUE, ...)
+               levels.only=TRUE, aehaz=aehaz, ...)
     
     if(multi) {
       endPlot()
